2001-08-06  Naba Kumar <kh_naba@users.sourceforge.net>
	
	* help.c, help.h: Added support for DevHelp context sensitive help
		and gnome api browsing.
	* Fixed toolbars and editor views "not save" bug.
	* Updated sgmldocs.make and configure.in to handle rh 7.1 crap.
	  (patch from Andy Piper <squiggle@ukgateway.net>)
	* Updated THANKS and chapter15.sgml for uk and ru translators.

2001-08-05  Naba Kumar <kh_naba@users.sourceforge.net>

	* Transfered ru.po, uk.po and update.sh from gnome-i18n/extra-po/anjuta
	* Updated configure.in to include these changes
	
2001-08-03  Stephane Demurget <demurgets@free.fr>

	* src/project_dbase_gui.c: fixed bug #446963
	  (on_project_dbase_ccview_update_start),
	  (on_project_dbase_ccview_update_end): added.
	  These two respectively disable and enable close file/project
	  menu entries and toolbar items, while the ccview part updates
	  its tag database.  


2001-08-03  Stephane Demurget <demurgets@free.fr>

	* configure.in: added sv to the ALL_LINGUAS list.
	

2001-08-01  Fatih Demir <kabalak@gtranslator.org>

	* anjuta.desktop.(in(.in)), configure.in & Makefile.am: Get the desktop
		file to work: merge translations and distribute it.

	* .cvsignore & ABOUT-NLS: Erh, "ABOUT-NLS" shouldn't be in CVS.

	* NEWS, README, THANKS & TODO: Spelling fixes.

2001-08-01  Stephane Demurget <demurgets@free.fr>

	* README: updated requirements.

	* scintilla/Makefile.am,
	  src/Makefile.am: fixed includes using $(srcdir), as the distcheck
	  target can't be realized (custom build path).

	* Makefile.am: added xml-i18n-* and anjuta.spec.in as EXTRA_DIST.
	  Removed install-data-local.

	* src/compiler_options.c: changed the include paths of the pixmaps.
	  we hadn't any warning because of the include paths passed to the
	  compiler. Thanks to make distcheck for reporting this.


2001-07-31  Stephane Demurget <demurgets@free.fr>

	* NEWS, THANKS: updated.

	* src/anjuta.c: (anjuta_fatal_signal_handler), (anjuta_exit_signal_handler):