@@ -33,7 +33,7 @@ in translating the project.
 	- Michele Campeotto <micampe@f2s.com>, for his Italian translation,
 	- Christian Rose <menthos@menthos.com>, for his Swedish translation,
 	- Yuriy Syrota <rasta@renome.rovno.ua>, for his Ukrainian translation,
-	- Valek Filippov <frob@df.ru>, for his Russian translatoin.
+	- Valek Filippov <frob@df.ru>, for his Russian translation.
 
 With warm regards,
 
