@@ -652,7 +652,7 @@ breakpoints_dbase_toggle_breakpoint (BreakpointsDBase* b)
 			}
 			node = g_list_next (node);
 		}
-		g_warning ("Funny, Breakpoint is set in the doc, but couldn't find the ID");
+		g_warning (_("Funny, Breakpoint is set in the doc, but couldn't find the ID"));
 		return;
 	}
 	
